<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appDescription"
        style="@style/AboutTextStyle"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/about_app_description" />

    <TextView
        android:id="@+id/developedBy"
        style="@style/AboutTextStyle"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/developed_by_text" />

    <TextView
        android:id="@+id/devName"
        style="@style/AboutTextStyle"
        android:text="@string/dev_name" />

</LinearLayout>